Fixed spacing issue at top of about us

--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ a.offsetanchor{
         height: 90vh;
         width: 30%;
         position: sticky; 
-        top:11.5vh;
+        top:10.8vh;
         padding:0vh;
         text-align: center;
     }
